--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Lemoncode Webpack 4.X Exercise</title>
   </head>
   <body>
     <header>
       <div id="imgContainer"></div>
     </header>
-    <main className="centered">
+    <main>
       <h1>Welcome to the Webpack 4.X exercise!</h1>
-      <section className="welcome">
+      <section>
         <h2>Please check the console (F12)</h2>
       </section>
     </main>
