update web layout

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Lemoncode Webpack 4.X Exercise</title>
+    <title>Webpack 4.X Exercise | Lemoncode Front-End Master VII Edition</title>
   </head>
   <body>
     <header>
       <div id="imgContainer"></div>
+      <h1>Front-End Master VII Edition</h1>
     </header>
     <main>
       <h1>Welcome to the Webpack 4.X exercise!</h1>
